<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".FragHome"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/azure">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="5dp"
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            style="@style/white_header"/>

        <TextView
            android:layout_marginTop="5dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="60dp"
            android:layout_marginBottom="20dp"
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/subheader_text"
            style="@style/white_subtitle"/>
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_height="0dp"
        android:layout_weight="0.7"
        android:layout_width="match_parent">

        <HorizontalScrollView
            android:scrollbars="none"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/clFormalWash"
                    android:layout_marginStart="25dp"
                    android:layout_width="120dp"
                    android:layout_height="150dp"
                    android:background="@drawable/rounded_all_around_but_rounder">

                    <ImageView
                        android:id="@+id/tile_2_image_view"
                        android:layout_width="match_parent"
                        android:layout_height="120dp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/ic_formal_wash"
                        android:contentDescription="@string/tile2" />

                    <TextView
                        android:id="@+id/tile_2_text_view"
                        style="@style/dark_azure_text_bold"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/tile2"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tile_2_image_view" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/clDryWash"
                    android:layout_marginStart="25dp"
                    android:layout_width="120dp"
                    android:layout_height="150dp"
                    android:background="@drawable/rounded_all_around_but_rounder">

                    <ImageView
                        android:id="@+id/tile_1_image_view"
                        android:layout_width="match_parent"
                        android:layout_height="120dp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/ic_dry_wash"
                        android:contentDescription="@string/tile1" />

                    <TextView
                        android:id="@+id/tile_1_text_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        style="@style/dark_azure_text_bold"
                        android:text="@string/tile1"
                        app:layout_constraintTop_toBottomOf="@+id/tile_1_image_view" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/clSteamIron"
                    android:layout_marginStart="25dp"
                    android:layout_marginEnd="40dp"
                    android:layout_width="120dp"
                    android:layout_height="150dp"
                    android:background="@drawable/rounded_all_around_but_rounder">

                    <ImageView
                        android:id="@+id/tile_3_image_view"
                        android:layout_width="match_parent"
                        android:layout_height="120dp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/ic_steam_iron"
                        android:contentDescription="@string/tile3" />

                    <TextView
                        android:id="@+id/tile_3_text_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        style="@style/dark_azure_text_bold"
                        android:text="@string/tile3"
                        app:layout_constraintTop_toBottomOf="@+id/tile_3_image_view" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>
        </HorizontalScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:layout_weight="1">

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:background="@drawable/rounded_top_rectangle"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearanceOverlay="@style/rounded_rect_top"
            app:srcCompat="@drawable/ic_wall_full" />

        <TextView
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="50dp"
            android:text="@string/wall_text"
            style="@style/grey_text_bold"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>